--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -40,6 +40,8 @@
     "clientPackageManager": "npm",
     "clientThemeVariant": "",
     "languages": ["es", "en"],
-    "enableGradleEnterprise": false
+    "enableGradleEnterprise": false,
+    "lastLiquibaseTimestamp": 1640574902000,
+    "entities": ["Documento"]
   }
 }
